# try-haskell-nix

./: README.md  make-parted.hs
hello-world/: LICENSE  MyLib.hs  default.nix  hello-world.cabal
simple_test/: simple-test.cabal
simple_test/test/: Test.hs
vector-ghcjs-issue/: LICENSE  Main.hs  default.nix  hello-world.cabal
