cabal-version:       2.4
name:                hello-world
version:             0.1.0.0
license-file:        LICENSE
author:              Divam
maintainer:          dfordivam@gmail.com
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     MyLib
  build-depends:       base ^>=4.13.0.0
  default-language:    Haskell2010

executable hello-world
  main-is:             Main.hs
  other-modules:       MyLib
  build-depends:       base ^>=4.13.0.0, hello-world
  default-language:    Haskell2010
