cabal-version:       2.4
name:                hello-world
version:             0.1.0.0
license-file:        LICENSE
author:              Divam
maintainer:          dfordivam@gmail.com
extra-source-files:  CHANGELOG.md

executable hello-world
  main-is:             Main.hs
  other-modules:       MyLib
  build-depends:       base
                       , vector
  default-language:    Haskell2010